пробую поменять файлы в репозитории

--- a/index.html
+++ b/index.html
@@ -394,6 +394,87 @@
     </aside>
 
   </div>
+
+  <!-- наши изделия-->
+  <div class="container">
+    <div class="shop-items">
+      <div class="shop-items-title">Наши изделия</div>
+  
+      <article class="shop-item">
+        <picture class="shop-item__picture">
+          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-desk1.jpg?raw=true" media="(min-width: 1200px)">
+          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-tablet1.jpg?raw=true" media="(min-width: 641px)">
+          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-mobile1.jpg?raw=true" media="(max-width: 640px)">
+          <img src="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-desk1.jpg?raw=true" alt="подушка" class="picture">
+        </picture>
+  
+        <div class="shop-item__body">
+          <div class="shop-item__content">
+            <h3 class="shop-item__title">подушка на диван</h3>
+            <div class="shop-item__discription">
+              <p>Набор из двух подушек с модными принтами. Видео о создании <a class="shop-item__link" href="#0">здесь</a>.</p>
+            </div>
+            <footer class="shop-item__footer">
+              <div class="shop-item__prices">
+                <span class="shop-item__price shop-item__price_old">1000 ₽</span>
+                <span class="shop-item__price">800 ₽</span>
+              </div>
+              <button class="shop-item__button" type="button">в магазин</button>
+            </footer>
+          </div>
+        </div>
+      </article>
+  
+      <article class="shop-item">
+        <picture class="shop-item__picture">
+          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-desk2.jpg?raw=true" media="(min-width: 1200px)">
+          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-tablet2.jpg?raw=true" media="(min-width: 641px)">
+          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-mobile2.jpg?raw=true" media="(max-width: 640px)">
+          <img src="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-desk2.jpg?raw=true" alt="" class="picture">
+        </picture>
+        <div class="shop-item__body">
+          <div class="shop-item__content">
+            <h3 class="shop-item__title">кукла "зайчик"</h3>
+            <div class="shop-item__discription">
+              <p>Интерьерная рукодельная кукла "ЗАЙЧИК", созданию которой посвещенна <a class="shop-item__link" href="#0">весенняя серия постов</a> в блоге и несколько подкастов.</p>
+            </div>
+            <footer class="shop-item__footer">
+              <div class="shop-item__prices">
+                <span class="shop-item__price">3500 ₽</span>
+              </div>
+              <button class="shop-item__button" type="button">в магазин</button>
+            </footer>
+          </div>
+        </div>
+      </article>
+  
+      <article class="shop-item">
+        <picture class="shop-item__picture">
+          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-desk3.jpg?raw=true" media="(min-width: 1200px)">
+          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-tablet3.jpg?raw=true" media="(min-width: 641px)">
+          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-mobile3.jpg?raw=true" media="(max-width: 640px)">
+          <img src="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-desk3.jpg?raw=true" alt="" class="picture">
+        </picture>
+        <div class="shop-item__body">
+          <div class="shop-item__content">
+            <h3 class="shop-item__title">шестиугольная рамка</h3>
+            <div class="shop-item__discription">
+              <p>Необычная рамка для украшения дома из видео <a class="shop-item__link" href="#0">"Как сделать рамку из подручных средств за 30 минут"</a></p>
+            </div>
+            <footer class="shop-item__footer">
+              <div class="shop-item__prices">
+                <span class="shop-item__price shop-item__price_old">500 ₽</span>
+                <span class="shop-item__price">400 ₽</span>
+              </div>
+              <button class="shop-item__button" type="button">в магазин</button>
+            </footer>
+          </div>
+        </div>
+      </article>
+  
+    </div>
+  </div>
+
 </div>
 
 <footer class="footer">
