--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+
 <header class="header">
   <div class="container">
     <!-- Линейка логотип и меню в шапке -->
@@ -270,7 +270,7 @@
 
         <article class="latest-post">
           <figure class="latest-post-picture">
-            <img src="https://netology-code.github.io/html-2-diploma/sources/images/151.jpg" alt="невнроятный йог" class="picture">
+            <img src="images/151.jpg" alt="невнроятный йог" class="picture">
           </figure>
           <div class="latest-post-frame">
             <time datatime="14-06-2019" class="sidebar-data">14 июня 2019</time>
@@ -280,7 +280,7 @@
 
         <article class="latest-post">
           <figure class="latest-post-picture">
-            <img src="https://netology-code.github.io/html-2-diploma/sources/images/45.jpg" alt="кресло на класном балконе" class="picture">
+            <img src="images/45.jpg" alt="кресло на класном балконе" class="picture">
           </figure>
           <div class="latest-post-frame">
             <time datatime="14-06-2019" class="sidebar-data">14 июня 2019</time>
@@ -290,7 +290,7 @@
 
         <article class="latest-post">
           <figure class="latest-post-picture">
-            <img src="https://netology-code.github.io/html-2-diploma/sources/images/501.jpg" alt="еда на столе" class="picture">
+            <img src="images/501.jpg" alt="еда на столе" class="picture">
           </figure>
           <div class="latest-post-frame">
             <time datatime="14-06-2019" class="sidebar-data">14 июня 2019</time>
@@ -300,7 +300,7 @@
 
         <article class="latest-post">
           <figure class="latest-post-picture">
-            <img src="https://netology-code.github.io/html-2-diploma/sources/images/7.jpg" alt="три девушки с длинными волосами" class="picture">
+            <img src="images/7.jpg" alt="три девушки с длинными волосами" class="picture">
           </figure>
           <div class="latest-post-frame">
             <time datatime="14-06-2019" class="sidebar-data">14 июня 2019</time>
@@ -411,10 +411,10 @@
   
       <article class="shop-item">
         <picture class="shop-item__picture">
-          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-desk1.jpg?raw=true" media="(min-width: 1200px)">
-          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-tablet1.jpg?raw=true" media="(min-width: 641px)">
-          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-mobile1.jpg?raw=true" media="(max-width: 640px)">
-          <img src="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-desk1.jpg?raw=true" alt="подушка" class="picture">
+          <source srcset="images/shop-item-desk1.jpg" media="(min-width: 1200px)">
+          <source srcset="images/shop-item-tablet1.jpg" media="(min-width: 641px)">
+          <source srcset="images/shop-item-mobile1.jpg" media="(max-width: 640px)">
+          <img src="images/shop-item-desk1.jpg" alt="подушка" class="picture">
         </picture>
   
         <div class="shop-item__body">
@@ -436,10 +436,10 @@
   
       <article class="shop-item">
         <picture class="shop-item__picture">
-          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-desk2.jpg?raw=true" media="(min-width: 1200px)">
-          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-tablet2.jpg?raw=true" media="(min-width: 641px)">
-          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-mobile2.jpg?raw=true" media="(max-width: 640px)">
-          <img src="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-desk2.jpg?raw=true" alt="" class="picture">
+          <source srcset="images/shop-item-desk2.jpg" media="(min-width: 1200px)">
+          <source srcset="images/shop-item-tablet2.jpg" media="(min-width: 641px)">
+          <source srcset="images/shop-item-mobile2.jpg" media="(max-width: 640px)">
+          <img src="images/shop-item-desk2.jpg" alt="кукла зайчик" class="picture">
         </picture>
         <div class="shop-item__body">
           <div class="shop-item__content">
@@ -459,10 +459,10 @@
   
       <article class="shop-item">
         <picture class="shop-item__picture">
-          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-desk3.jpg?raw=true" media="(min-width: 1200px)">
-          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-tablet3.jpg?raw=true" media="(min-width: 641px)">
-          <source srcset="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-mobile3.jpg?raw=true" media="(max-width: 640px)">
-          <img src="https://github.com/netology-code/mq-diploma/blob/master/sources/img/shop-item-desk3.jpg?raw=true" alt="" class="picture">
+          <source srcset="images/shop-item-desk3.jpg" media="(min-width: 1200px)">
+          <source srcset="images/shop-item-tablet3.jpg" media="(min-width: 641px)">
+          <source srcset="images/shop-item-mobile3.jpg" media="(max-width: 640px)">
+          <img src="images/shop-item-desk3.jpg" alt="шестиугольная рамка" class="picture">
         </picture>
         <div class="shop-item__body">
           <div class="shop-item__content">
@@ -517,7 +517,58 @@
 
   </div>
 </footer>
-<!-- partial -->
+
+<!--  Pop-Up -->
+<div class="popup _hidden">
+  <div class="popup__container _hidden">
+    <div class="fedback">
+      <header class="popup__title">ваш фидбэк</header>
+      <div class="fedback__content">
+        <form action="" class="popup__form">
+          <!-- Select -->
+          <div class="popup__form-group popup__select-group">
+            <label class="select-group">
+              <span class="select-label">Как часто вы заходите на сайт?</span>
+              <select class="select">
+                <option value="everyday" class="option" selected>Почти каждый день</option>
+                <option value="few__days" class="option">Раз в несколько дней</option>
+                <option value="few__weeks" class="option">Раз в несколько недель</option>
+                <option value="few__times__year" class="option">Несколько раз в год</option>
+              </select>
+            </label>
+          </div>
+          <!-- Radio -->
+          <div class="popup__form-group popup__radio-group">
+            <span class="radio-hint">Вы подписаны на e-mail рассылку?</span>
+            <label class="radio-group">
+              <input type="radio" name="radio-group" class="radio" cheked>
+              <span class="radio-text">Да</span>
+            </label>
+            <label class="radio-group">
+              <input type="radio" name="radio-group" class="radio">
+              <span class="radio-text">Нет</span>
+            </label>
+          </div>
+          <!-- Texearea -->
+          <div class="popup__form-group popup__field-group">
+            <label class="field-group">
+              <span class="field-label">Раскажите, какой контент вы хотели бы видеть на нашем сайте?</span>
+              <textarea class="field textarea" placeholder="Может больше рецептов?"></textarea>
+            </label>
+          </div>
+          <!-- Submit -->
+          <div class="popup__form-group popup__submit-group">
+            <button class="popup__button">
+              <span class="popup__button-label" type="submit">отправить</span>
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- крестик закрыть -->
+    <button class="popup__close" type="button">Закрыть окно</button>
+  </div>
+</div>
   
 </body>
 </html>
