--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 
       <!-- Блок тем -->
       <div class="categories">
-        <span class="aside-title">категории</span>
+        <span class="aside-title">темы</span>
         <ul class="categories-list">
           <li class="category">
             <a href="#0" class="categories-link">Красота</a>
@@ -424,7 +424,7 @@
         <div class="shop-item__content">
           <h3 class="shop-item__title">подушка на диван</h3>
           <div class="shop-item__discription">
-            <p>Набор из двух подушек с модными принтами. Видео о создании <a class="shop-item__link" href="#0">здесь</a>.</p>
+            <p class="shop-item__discription">Набор из двух подушек с модными принтами. Видео о создании <a class="shop-item__link" href="#0">здесь</a>.</p>
           </div>
           <footer class="shop-item__footer">
             <div class="shop-item__prices">
@@ -448,7 +448,7 @@
         <div class="shop-item__content">
           <h3 class="shop-item__title">кукла "зайчик"</h3>
           <div class="shop-item__discription">
-            <p>Интерьерная рукодельная кукла "ЗАЙЧИК", созданию которой посвещенна <a class="shop-item__link" href="#0">весенняя серия постов</a> в блоге и несколько подкастов.</p>
+            <p class="shop-item__discription">Интерьерная рукодельная кукла "ЗАЙЧИК", созданию которой посвещенна <a class="shop-item__link" href="#0">весенняя серия постов</a> в блоге и несколько подкастов.</p>
           </div>
           <footer class="shop-item__footer">
             <div class="shop-item__prices">
@@ -471,7 +471,7 @@
         <div class="shop-item__content">
           <h3 class="shop-item__title">шестиугольная рамка</h3>
           <div class="shop-item__discription">
-            <p>Необычная рамка для украшения дома из видео <a class="shop-item__link" href="#0">"Как сделать рамку из подручных средств за 30 минут"</a></p>
+            <p class="shop-item__discription">Необычная рамка для украшения дома из видео <a class="shop-item__link" href="#0">"Как сделать рамку из подручных средств за 30 минут"</a></p>
           </div>
           <footer class="shop-item__footer">
             <div class="shop-item__prices">
