планшетная и мобильная верстка по пиксель перфекту

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
         <article class="latest-post">
           <figure class="latest-post-picture">
-            <img src="images/2.jpg" alt="красивое место на рассвете" class="picture">
+            <img src="images/2.jpg" alt="красивое место на рассвете" class="picture__aside">
           </figure>
           <div class="latest-post-frame">
             <time datatime="14-06-2019" class="sidebar-data">14 июня 2019</time>
@@ -273,7 +273,7 @@
 
         <article class="latest-post">
           <figure class="latest-post-picture">
-            <img src="images/151.jpg" alt="невнроятный йог" class="picture">
+            <img src="images/151.jpg" alt="невнроятный йог" class="picture__aside">
           </figure>
           <div class="latest-post-frame">
             <time datatime="14-06-2019" class="sidebar-data">14 июня 2019</time>
@@ -283,7 +283,7 @@
 
         <article class="latest-post">
           <figure class="latest-post-picture">
-            <img src="images/45.jpg" alt="кресло на класном балконе" class="picture">
+            <img src="images/45.jpg" alt="кресло на класном балконе" class="picture__aside">
           </figure>
           <div class="latest-post-frame">
             <time datatime="14-06-2019" class="sidebar-data">14 июня 2019</time>
@@ -293,7 +293,7 @@
 
         <article class="latest-post">
           <figure class="latest-post-picture">
-            <img src="images/501.jpg" alt="еда на столе" class="picture">
+            <img src="images/501.jpg" alt="еда на столе" class="picture__aside">
           </figure>
           <div class="latest-post-frame">
             <time datatime="14-06-2019" class="sidebar-data">14 июня 2019</time>
@@ -303,7 +303,7 @@
 
         <article class="latest-post">
           <figure class="latest-post-picture">
-            <img src="images/7.jpg" alt="три девушки с длинными волосами" class="picture">
+            <img src="images/7.jpg" alt="три девушки с длинными волосами" class="picture__aside">
           </figure>
           <div class="latest-post-frame">
             <time datatime="14-06-2019" class="sidebar-data">14 июня 2019</time>
@@ -422,7 +422,7 @@
 
       <div class="shop-item__body">
         <div class="shop-item__content">
-          <h3 class="shop-item__title">подушка на диван</h3>
+          <h3 class="shop-item__title">подушки на диван</h3>
           <div class="shop-item__discription">
             <p class="shop-item__discription">Набор из двух подушек с модными принтами. Видео о создании <a class="shop-item__link" href="#0">здесь</a>.</p>
           </div>
